2011-01-10  Martin Maechler  <maechler@stat.math.ethz.ch>

	* DESCRIPTION (Version): 0.2-4

	* R/Math.R (factorial): improve integer test (thanks to Petr Savicky).

2010-01-22  Martin Maechler  <maechler@stat.math.ethz.ch>

	* DESCRIPTION (Version): 0.2-3

	* src/convert.c (R_rnd2GMP): new; allow to specify
	"rounding mode" from R. For now, for conversion to MPFR.
	Change default to use (round to) [N]earest rather than [D]ownwards.


2010-01-21  Martin Maechler  <maechler@stat.math.ethz.ch>

	* DESCRIPTION (Version): 0.2-2

	* R/as.R (formatMpfr): add 'showNeg0' argument, and fix printing of
	zeros.

	* R/mpfr.R ([): ensure out-of-range indexing returns valid "mpfr".

	* tests/create.R: test the above.

2010-01-20  Martin Maechler  <maechler@stat.math.ethz.ch>

	* R/mpfr.R (.getPrec, getPrec): previous getPrec() renamed to
	.getPrec(); the new getPrec() also works for simple R "numbers",
	and is used in mpfr(), and the following :

	* R/mpfr.R ([<-): for non-"mpfr" value, use at least the previous
	precision, following a chat with Petr Savicky.

	* src/convert.c (d2mpfr1_list): ensure x is recycled when prec
	is longer than x.
	(str2mpfr1_list): ditto.

2010-01-18  Martin Maechler  <maechler@stat.math.ethz.ch>

	* DESCRIPTION (Version): 0.2-1

	* R/array.R (.matmult.R): "obvious" speed up, replacing the
	innermost for() loop by a sum(); inspired by a patch from Petr.
	*However* the real speedup would use a .Call(..) directly!

2010-01-16  Martin Maechler  <maechler@stat.math.ethz.ch>

	* R/mpfr.R (.mpfr.repl, [<-): change such that  x[] <- 1  works;
	also z[i] <- v when i is larger than length(z).

	* tests/create.R: test the above.

2010-01-15  Martin Maechler  <maechler@stat.math.ethz.ch>

	* R/array.R (.matmult.R): tcrossprod changes along to the bug fix
	in R (!).

	* DESCRIPTION (Version): 0.2-0

2010-01-14  Martin Maechler  <maechler@stat.math.ethz.ch>

	* R/array.R ([<-): define for more signatures