@@ -2,10 +2,10 @@ Package: Rmpfr
 Type: Package
 Title: R MPFR - Multiple Precision Floating-Point Reliable
 Version: 0.2-4
-Date: 2011-01-10
+Date: 2011-01-15
 Author: Martin Maechler
 Maintainer: Martin Maechler <maechler@stat.math.ethz.ch>
-Depends: methods, R (>= 2.8.1)
+Depends: methods, R (>= 2.9.1)
 SystemRequirements: MPFR (MP Floating-Point Reliable Library, http://mpfr.org/)
   and GMP (GNU Multiple Precision library, http://gmplib.org/), see README
 Description: The package aims at providing S4 classes and methods for
